# HabitTacker

./: .clang-format  .gitignore  CMakeGraphVizOptions.cmake  CMakeLists.txt  TestRunner
Docs/: Makefile  (+2 more)
Src/Core/: CMakeLists.txt
Src/Core/Cli/: CommandLineParser.cpp  CommandLineParser.h  ParamProperties.cpp  ParamProperties.h  Parameters.cpp  Parameters.h  ParserResult.cpp  Table.cpp  Table.h  Validator.cpp  Validator.h  ValidatorEnums.h
Src/Core/Config/: ConfigFile.cpp  ConfigFile.h  Settings.cpp  Settings.h
Src/Core/Dao/: DaoFactory.cpp  DaoFactory.h  UnknownDao.h
Src/Core/Database/: Database.cpp  Database.h  Database_fwd.h  Dataset.cpp  Dataset.h  Dataset2.cpp  Dataset2.h  DatasetHeader.h  Dataset_fwd.h  Parameters.cpp  Parameters.h  Query.cpp  Query.h  Row.cpp  Row.h  SQLite_fwd.h  SetSqliteParam.cpp  SetSqliteParam.h  ValueGetter.cpp  ValueGetter.h
Src/Core/DateTime/: AddDays.cpp  AddDays.h  Date.h  DateConsts.h  DateFormat.cpp  DateFormat.h  DateLiteral.cpp  DateLiteral.h  DateTime.cpp  DateTime.h  DateTimeGetter.cpp  DateTimeGetter.h  Duration.cpp  Duration.h  FormatDate.cpp  FormatDate.h  Operators.cpp  Operators.h  ParseDate.cpp  ParseDate.h  Timestamp.h
Src/Core/Exceptions/: LogicError.cpp  LogicError.h  RuntimeError.cpp
Src/Core/Format/: DateFormatter.h  OptionalFormatter.h
Src/Core/Fwd/: CLI_fwd.h
Src/Core/Logger/: Log.cpp  Log.h  LogConfig.h  Logger.cpp  Logger.h
Src/Core/Strings/: Case.cpp  Case.h  Compare.cpp  Compare.h  Format.cpp  Format.h  Replace.cpp
Src/Core/Types/: DemangledTypeName.h  IsOptional.h  TypeNames.cpp  TypeNames.h
Src/Core/Utils/Exceptions/: LogicError.cpp  RuntimeError.cpp  RuntimeError.h
Src/Core/Utils/Logger/: Log.cpp  Log.h
Src/Core/Utils/Strings/: Case.cpp  Compare.cpp  Replace.cpp  Replace.h
Src/HT/: AppInit.cpp  AppInit.h  CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h  HabitDefinitionEntity.h
Src/HT/Actions/: ActionError.cpp  ActionError.h  ActionRegister.cpp  ActionRegister.h  AddAction.cpp  AddAction.h  BaseAction.cpp  BaseAction.h  DefaultAction.cpp  DefaultAction.h  DoneAction.cpp  DoneAction.h  EditAction.cpp  EditAction.h  HelpAction.cpp  HelpAction.h  IAction.h  InitAction.cpp  InitAction.h  ListAction.cpp  ListAction.h
Src/HT/AppInit/: DaoFactoryInitializer.cpp  DaoFactoryInitializer.h  GetSettings.cpp  GetSettings.h  Help.cpp  Help.h  InitDaoFactory.cpp  InitDaoFactory.h  RegisterActions.cpp  RegisterActions.h  Settings.cpp  Settings.h  Version.cpp
Src/HT/Cli/: CommandLineParser.cpp  CommandLineParser.h  ParserResult.cpp  ParserResult.h
Src/HT/Dao/: DaoFactory.cpp  DaoFactory.h  DatabaseCreator.cpp  DatabaseCreator.h  HabitDao.cpp  HabitDao.h  HabitDefinitionDao.cpp  HabitDefinitionDao.h  IHabitDao.h  IHabitDefinitionDao.h  IRequirementDao.h  RequirementDao.cpp  RequirementDao.h  UnknownDao.h
Src/HT/Entity/: HabitDefinitionEntity.cpp  HabitDefinitionEntity.h  HabitEntity.cpp  HabitEntity.h  Requirement.cpp  Requirement.h
Src/HtCli/: AppInit.cpp  CMakeLists.txt
Src/HtCli/Actions/: ActionError.cpp  ActionError.h  ActionRegister.cpp  ActionRegister.h  AddAction.cpp  AddAction.h  BaseAction.cpp  BaseAction.h  BaseCommand.cpp  BaseCommand.h  DefaultAction.cpp  DefaultAction.h  DoneAction.cpp  DoneAction.h  EditAction.cpp  EditAction.h  IAction.h  ICommand.h  InitAction.cpp  InitAction.h  ListAction.cpp  ListAction.h
Src/HtCli/AppInit/: GetSettings.cpp  GetSettings.h  Help.cpp  InitDaoFactory.cpp  RegisterActions.cpp  RegisterActions.h  RegisterCommands.cpp  RegisterCommands.h  Version.cpp  Vesrion.h
Src/HtCli/Commands/: AddCommand.cpp  AddCommand.h  BaseCommand.cpp  BaseCommand.h  CommandError.cpp  CommandError.h  CommandRegister.cpp  CommandRegister.h  DoneCommand.cpp  DoneCommand.h  EditCommand.cpp  EditCommand.h  ICommand.h  InitCommand.cpp  InitCommand.h  ListCommand.cpp  ListCommand.h  ShowCommand.cpp  ShowCommand.h
Src/HtGui/: CMakeLists.txt  RecentDatabasesDelegate.qml  RecentDatabasesModel.cpp  RecentDatabasesModel.h  WelcomePage.qml  main.cpp  main.qml  qml.qrc
Tests/Core/: CMakeLists.txt  main.cpp
Tests/Core/CLI/: CommandLineParserTests.cpp  ParametersTests.cpp  ParserResultTests.cpp  ValidatorTests.cpp
Tests/Core/Cli/: TableTests.cpp
Tests/Core/Config/: ConfigFileTests.cpp  SettingsTests.cpp
Tests/Core/Dao/: DaoFactoryTests.cpp
Tests/Core/Database/: Dataset2Tests.cpp  DatasetTests.cpp  ParametersTest.cpp  QueryTests.cpp  RowTests.cpp  ValueGetterTest.cpp
Tests/Core/DateTime/: AddDaysTests.cpp  DateLiteralTests.cpp  DateTimeTests.cpp  DurationTests.cpp  FormatDateTests.cpp  OperatorsTests.cpp  ParseDateTests.cpp
Tests/Core/Format/: DateFormatterTests.cpp  OptionalFormatterTests.cpp
Tests/Core/Logger/: LogTests.cpp
Tests/Core/Strings/: CaseTests.cpp  CompareTests.cpp  FormatTests.cpp  ReplaceTests.cpp
Tests/Core/Types/: DemangledTypeNameTests.cpp  IsOptionalTests.cpp
Tests/CppTests/: CMakeLists.txt  ForLoopTests.cpp  LambdaTests.cpp  RegexTests.cpp  SmartPtrTests.cpp  StringTests.cpp  TypeTraitsTests.cpp  VariableParametersTest.cpp
Tests/HT/: CMakeLists.txt  CommandLineParserTests.cpp  main.cpp
Tests/HT/Actions/: ActionRegisterTests.cpp  AddActionTests.cpp  DefaultActionTests.cpp  DoneActionTests.cpp  EditActionTests.cpp  InitActionTests.cpp  ListActionTests.cpp
Tests/HT/AppInit/: SettingsTests.cpp
Tests/HT/CLI/: ParserResultTests.cpp
Tests/HT/Dao/: DaoFactoryTests.cpp  HabitDaoTests.cpp  HabitDefinitionDaoTests.cpp  RequirementDaoTests.cpp
Tests/HtCli/: CMakeLists.txt
Tests/HtCli/Actions/: ActionRegisterTests.cpp  AddActionTests.cpp  DefaultActionTests.cpp  DoneActionTests.cpp  EditActionTests.cpp  InitActionTests.cpp  ListActionTests.cpp
Tests/HtCli/Commands/: AddCommandTests.cpp  CommandRegisterTests.cpp  DefaultCommandTests.cpp  DoneCommandTests.cpp  EditCommandTests.cpp  InitCommandTests.cpp  ListCommandTests.cpp
Tests/HtCli/Tools/: CliTestTools.cpp  CliTestTools.h
Tests/LibTests/: CMakeLists.txt  DateTests.cpp  FmtTests.cpp  SqliteForeignKeyTests.cpp  SqliteUniqieTests.cpp  Sqlite_returnIdOfInsertedObject.cpp  main.cpp
(+83 files in other folders)
