add_library(Core
	Cli/CommandLineParser.cpp
	Cli/Parameters.cpp
	Cli/ParamProperties.cpp
	Cli/Table.cpp
	Cli/Validator.cpp
	Config/ConfigFile.cpp
	Config/Settings.cpp
	Dao/DaoFactory.cpp
	Database/Database.cpp
	Database/Dataset.cpp
	Database/Parameters.cpp
	Database/Query.cpp
	Database/Row.cpp
	Database/SetSqliteParam.cpp
	Database/ValueGetter.cpp
	DateTime/DateFormat.cpp
	DateTime/DateLiteral.cpp
	DateTime/DateTimeGetter.cpp
	DateTime/FormatDate.cpp
	DateTime/Operators.cpp
	DateTime/ParseDate.cpp
	Exceptions/LogicError.cpp
	Exceptions/RuntimeError.cpp
	Logger/Log.cpp
	Logger/Logger.cpp
	Strings/Case.cpp
	Strings/Compare.cpp
	Strings/Replace.cpp
)

target_link_libraries(Core PRIVATE
	date_interface
	fmt
	nlohmann_json
	SQLite
)
